k8s/services/message-service/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: message
          resources:
            requests:
              memory: "512Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
