k8s/services/message-service/overlays/dev/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: message-ingressroute
  labels:
    app: message
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dev.viscord.app`) && (PathPrefix(`/api/messages`) || PathRegexp(`^/api/channels/[^/]+/(messages|attachments)`))
      services:
        - name: message-service
          port: 3000
      middlewares:
        - name: forward-auth
        - name: strip-api-prefix
